Fix tooltip flickering

--- a/src/components/GenericTooltip/GenericTooltip.module.scss
+++ b/src/components/GenericTooltip/GenericTooltip.module.scss
@@ -1,4 +1,5 @@
 .tooltip {
   position: fixed;
   z-index: 100000000;
+  pointer-events: none;
 }
